--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -8,10 +8,8 @@
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">Users</a></li>
-            <li><a href="">Search</a></li>
             <li><a href="">Summary</a></li>
-            <li><a href="/logout">Logout</a></li>
-            <li><a href="">Edit Profile</a></li>
+            <li><a href="{{ url_for('logout') }}">Logout</a></li>
         </ul>
     </div>
 </nav>
