--- a/templates/login.html
+++ b/templates/login.html
@@ -3,13 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-    <!-- {%  with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for msg in messages %}
-                <p>{{msg}}</p>
-            {% endfor %}
-        {% endif %}
-    {% endwith %} -->
+
 <form action="#" method="post">
     <div class="container">
         <label for="email"><b>Email</b></label>
@@ -19,14 +13,11 @@
         <input type="password" name="pwd" required>
 
         <button type="submit" value = "login">Login</button>
-        <!-- <label>
-        <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label> -->
     </div>
 
     <div class="container" style="background-color:#f1f1f1">
         <button type="button" class="cancelbtn">Cancel</button>
-        <span class="psw"><a href="/register">Create Account</a></span>
+        <span class="psw"><a href="{{ url_for('auth.register') }}">Create Account</a></span>
     </div>
 </form> 
 {% endblock %}
