--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h2>Edit Profile</h2>
-<form method="POST" action="{{ url_for('edit_profile', id=user.id) }}">
+<form method="POST" action="{{ url_for('user.edit_profile', id=user.id) }}">
     <div class="container">
         <label for="email"><b>Change Email</b></label>
         <input type="text" placeholder="Enter Email" name="email" value="{{ user.email }}" required>
@@ -24,5 +24,5 @@
         <button type="submit" value="update">Update Profile</button>
     </div>
 </form>
-<a href="{{ url_for('dashboard') }}">Back to Dashboard</a>
+<a href="{{ url_for('user.dashboard') }}">Back to Dashboard</a>
 {% endblock %}
